--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,13 +4,14 @@ on:
   workflow_run:
     workflows: [Build and test]
     types: [completed]
+    branches:
+      - 20*
 
 jobs:
   release:
     if: >
       github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.event == 'push' &&
-      startsWith(github.event.workflow_run.head_branch, '20')
+      github.event.workflow_run.event == 'push'
     runs-on: ubuntu-latest
     steps:
 
