--- a/test-data/test-dtd.yml
+++ b/test-data/test-dtd.yml
@@ -1,3 +1,8 @@
+#
+# Methods and properties of superclass of DTD (etree._Validator)
+# are moved to test-validator.yml
+#
+
 - case: constructor
   parametrized:
     - args: filename
@@ -58,31 +63,6 @@
     reveal_type(dtd.{{ prop }})  # N: Revealed type is "Union[builtins.str, None]"
     dtd.{{ prop }} = dtd.{{ prop }}  # E: Property "{{ prop }}" defined in "DTD" is read-only
 
-- case: validate
-  files: *INC
-  parametrized:
-    - args: root
-    - args: etree=tree
-  main: |
-    from dtdtest import dtd, root, tree
-    reveal_type(dtd.validate({{ args }}))  # N: Revealed type is "builtins.bool"
-
-- case: validate_noargs
-  files: *INC
-  main: |
-    from dtdtest import dtd
-    dtd.validate()  # E: Missing positional argument "etree" in call to "validate" of "_Validator"
-
-- case: validate_badargs
-  files: *INC
-  expect_fail: true
-  parametrized:
-    - args: None
-    - args: root, None
-    - args: badarg=root
-  main: |
-    from dtdtest import dtd, root
-    dtd.validate({{ args }})
 
 - case: dtd_methods
   files: *INC
